--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=core_botics
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.133.4+1.21.8
+geckolib_version=5.2.2
