more code clean up

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ archives_base_name=core_botics
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.133.4+1.21.8
 geckolib_version=5.2.2
+rei_version=20.0.811
